--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,15 @@
 version: '3'
 services:
-  postgres:
-    image: 'postgres:latest'
-    environment:
-      - POSTGRES_PASSWORD=p@ssw0rd
-  redis:
-    image: 'redis:latest'
   nginx:
-    restart: always
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
+    image: fibon4code/multi-nginx
+    memlimit: 128m
+    hostname: nginx
     ports:
-      - 3050:80
-  api:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./server
-    volumes:
-      - /app/node_modules
-      - ./server:/app
+      - 80:80
+  server:
+    image: fibon4code/multi-server
+    memlimit: 128m
+    hostname: api
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -29,21 +19,13 @@ services:
       - PGPASSWORD=p@ssw0rd
       - PGPORT=5432
   client:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./client
-    environment:
-      - WDS_SOCKET_PORT=0
-    volumes:
-      - /app/node_modules
-      - ./client:/app
+    image: fibon4code/multi-client
+    memlimit: 128m
+    hostname: client
   worker:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./worker
-    volumes:
-      - /app/node_modules
-      - ./worker:/app
+    image: fibon4code/multi-worker
+    memlimit: 128m
+    hostname: worker
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
